--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alexander Melo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "npm": "^6.0.1"
