--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "mongoose": "^5.1.0",
     "npm": "^6.0.1"
   }
 }
